--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                                     <li class="dropdown__item news__item p20 width-full">
                                         <a href="" class="dropdown__link text flex g20">
                                             <div class="news__banner">
-                                                <img src="/assets/image/static-notification-light.22c3e494.svg" alt="News banner">
+                                                <img src="./assets/image/static-notification-light.22c3e494.svg" alt="News banner">
                                             </div>
                                             <div class="news__content">
                                                 <p class="body-medium fw-normal">
@@ -84,7 +84,7 @@
                                     <li class="dropdown__item news__item p20 width-full">
                                         <a href="" class="dropdown__link text flex g20">
                                             <div class="news__banner">
-                                                <img src="/assets/image/static-notification-light.22c3e494.svg" alt="News banner">
+                                                <img src="./assets/image/static-notification-light.22c3e494.svg" alt="News banner">
                                             </div>
                                             <div class="news__content">
                                                 <p class="body-medium fw-normal">
@@ -97,7 +97,7 @@
                                     <li class="dropdown__item news__item p20 width-full">
                                         <a href="" class="dropdown__link text flex g20">
                                             <div class="news__banner">
-                                                <img src="/assets/image/static-notification-light.22c3e494.svg" alt="News banner">
+                                                <img src="./assets/image/static-notification-light.22c3e494.svg" alt="News banner">
                                             </div>
                                             <div class="news__content">
                                                 <p class="body-medium fw-normal">
@@ -110,7 +110,7 @@
                                     <li class="dropdown__item news__item p20 width-full">
                                         <a href="" class="dropdown__link text flex g20">
                                             <div class="news__banner">
-                                                <img src="/assets/image/static-notification-light.22c3e494.svg" alt="News banner">
+                                                <img src="./assets/image/static-notification-light.22c3e494.svg" alt="News banner">
                                             </div>
                                             <div class="news__content">
                                                 <p class="body-medium fw-normal">
@@ -181,7 +181,7 @@
                             
                             <button class="cta__btn cta__btn--firefox btn fw-bold">
                                 <div class="icon">
-                                    <img src="/assets/image/firefox-logo.svg" alt="firefox logo - browser logo">
+                                    <img src="./assets/image/firefox-logo.svg" alt="firefox logo - browser logo">
                                 </div>
                                 Switch to Ecosia - it's free
                             </button>
@@ -471,7 +471,7 @@
                 <div class="hero--right col l-6 m-0 c-0 por">
                     <div class="img-cover width-full height-full mask__img"></div>
                     <div class="lazy-load width-full height-full">
-                        <img src="/assets/image/above-fold.ba8d71c--lazyload.jpg" class="img-cover" data-src="/assets/image/above-fold@3x.2fc91b4.jpg" alt="">
+                        <img src="./assets/image/above-fold.ba8d71c--lazyload.jpg" class="img-cover" data-src="./assets/image/above-fold@3x.2fc91b4.jpg" alt="">
                     </div>
                 </div>
             </div>
@@ -484,11 +484,11 @@
                 <div class="section__content__holder slider__content__holder flex g60">
                     <div class="slider__imgs oh">
                         <div class="slider__imgs__inner flex">
-                            <div class="slider__img__holder banner-cover active" data-index="0" style="background-image: url('/assets/image/extension-slide1.b3c72e3e.svg')">
+                            <div class="slider__img__holder banner-cover active" data-index="0" style="background-image: url('./assets/image/extension-slide1.b3c72e3e.svg')">
                             </div>
-                            <div class="slider__img__holder banner-cover" data-index="1" style="background-image: url('/assets/image/extension-slide2.845456e1.svg')">
+                            <div class="slider__img__holder banner-cover" data-index="1" style="background-image: url('./assets/image/extension-slide2.845456e1.svg')">
                             </div>
-                            <div class="slider__img__holder banner-cover" data-index="2" style="background-image: url('/assets/image/extension-slide3.f38fb6a7.svg')">
+                            <div class="slider__img__holder banner-cover" data-index="2" style="background-image: url('./assets/image/extension-slide3.f38fb6a7.svg')">
                             </div>
                         </div>
                     </div>
@@ -544,7 +544,7 @@
                 <main class="project__card__wrapper">
                     <div class="project__card project__card--brazil oh rounded-8">
                         <div class="project__card__banner oh lazy-load">
-                            <div class="banner banner-cover" data-src="/assets/image/project-card-1.jpg" style="background-image: url('/assets/image/project-card-1-lazyload.jpg')"></div>
+                            <div class="banner banner-cover" data-src="./assets/image/project-card-1.jpg" style="background-image: url('./assets/image/project-card-1-lazyload.jpg')"></div>
                             <div class="mask__img"></div>
                         </div>
                         <div class="project__card__content">
@@ -555,7 +555,7 @@
                     </div>
                     <div class="project__card project__card--senegal oh rounded-8">
                         <div class="project__card__banner oh lazy-load">
-                            <div class="banner banner-cover" data-src="/assets/image/project-card-2.jpg" style="background-image: url('/assets/image/project-card-2-lazyload.jpg')"></div>
+                            <div class="banner banner-cover" data-src="./assets/image/project-card-2.jpg" style="background-image: url('./assets/image/project-card-2-lazyload.jpg')"></div>
                             <div class="mask__img"></div>
                         </div>
                         <div class="project__card__content">
@@ -566,7 +566,7 @@
                     </div>
                     <div class="project__card project__card--indonesia oh rounded-8">
                         <div class="project__card__banner oh lazy-load">
-                            <div class="banner banner-cover" data-src="/assets/image/project-card-3.jpg" style="background-image: url('/assets/image/project-card-3-lazyload.jpg')"></div>
+                            <div class="banner banner-cover" data-src="./assets/image/project-card-3.jpg" style="background-image: url('./assets/image/project-card-3-lazyload.jpg')"></div>
                             <div class="mask__img"></div>
                         </div>
                         <div class="project__card__content">
@@ -594,12 +594,12 @@
                             <div class="before-after--picture banner-cover por oh">
                                 <div class="before-after--picture before--picture banner-cover oh">
                                     <div class="before-after--picture__inner">
-                                        <img src="/assets/image/img-before.1d3e4c7.jpg" alt="before" style="width: 100%; height: 100%">
+                                        <img src="./assets/image/img-before.1d3e4c7.jpg" alt="before" style="width: 100%; height: 100%">
                                     </div>
                                 </div>
                                 <div class="before-after--picture after--picture banner-cover oh">
                                     <div class="before-after--picture__inner">
-                                        <img src="/assets/image/img-after.4701afd.jpg" alt="after" style="height: 100%">
+                                        <img src="./assets/image/img-after.4701afd.jpg" alt="after" style="height: 100%">
                                     </div>
                                 </div>
                             </div>
@@ -750,7 +750,7 @@
 
                 <div class="map__section__background">
                     <div class="map por">
-                        <div class="map__banner banner-contain abs-full" style="background-image: url(/assets/image/map-light-mode.f4068983.svg);"></div>
+                        <div class="map__banner banner-contain abs-full" style="background-image: url(./assets/image/map-light-mode.f4068983.svg);"></div>
                     </div>
                 </div>
 
@@ -784,7 +784,7 @@
 
         <!-- wave seperator start -->
         <div class="section wave__seperator por banner-contain" 
-        style="background-image: url(/assets/image/tertiary-l.99ff2dad.svg);">
+        style="background-image: url(./assets/image/tertiary-l.99ff2dad.svg);">
         </div>
         <!-- wave seperator end -->
         
@@ -801,7 +801,7 @@
                     </div>
                     <button class="report-btn btn outline-btn">See our financial report</button>
                     <div class="report-chart por">
-                        <div class="chart-donut banner-cover abs-full" style="background-image: url(/assets/image/financial-reports-donut.49a00648.svg);">
+                        <div class="chart-donut banner-cover abs-full" style="background-image: url(./assets/image/financial-reports-donut.49a00648.svg);">
                         </div>
                         <div class="report-text__wrapper poa">
                             <div class="report-text__inner tac">
@@ -825,7 +825,7 @@
                 <div class="claim-values__wrapper">
                     <div class="claim-value__item flex">
                         <div class="claim-value__background__wrapper">
-                            <div class="claim-value__background banner-cover" style="background-image: url(/assets/image/profits.f00cdef5.svg);"></div>
+                            <div class="claim-value__background banner-cover" style="background-image: url(./assets/image/profits.f00cdef5.svg);"></div>
                         </div>
                         <div class="claim-value__text">
                             <div class="claim-value__text--h4 fw-bold">100% of profits for the planet </div>
@@ -834,7 +834,7 @@
                     </div>
                     <div class="claim-value__item flex">
                         <div class="claim-value__background__wrapper">
-                            <div class="claim-value__background banner-cover" style="background-image: url(/assets/image/community.8a25d277.svg);"></div>
+                            <div class="claim-value__background banner-cover" style="background-image: url(./assets/image/community.8a25d277.svg);"></div>
                         </div>
                         <div class="claim-value__text">
                             <div class="claim-value__text--h4 fw-bold">
@@ -844,7 +844,7 @@ Collective climate action</div>
                     </div>
                     <div class="claim-value__item flex">
                         <div class="claim-value__background__wrapper">
-                            <div class="claim-value__background banner-cover" style="background-image: url(/assets/image/coin.454fb56c.svg);"></div>
+                            <div class="claim-value__background banner-cover" style="background-image: url(./assets/image/coin.454fb56c.svg);"></div>
                         </div>
                         <div class="claim-value__text">
                             <div class="claim-value__text--h4 fw-bold">No greenwashing </div>
@@ -853,7 +853,7 @@ Collective climate action</div>
                     </div>
                     <div class="claim-value__item flex">
                         <div class="claim-value__background__wrapper">
-                            <div class="claim-value__background banner-cover" style="background-image: url(/assets/image/world.b2ddc237.svg);"></div>
+                            <div class="claim-value__background banner-cover" style="background-image: url(./assets/image/world.b2ddc237.svg);"></div>
                         </div>
                         <div class="claim-value__text">
                             <div class="claim-value__text--h4 fw-bold">Beyond neutral </div>
@@ -867,7 +867,7 @@ Collective climate action</div>
 
         <!-- wave seperator start -->
         <div class="section wave__seperator por banner-cover"
-        style="background-image: url(/assets/image/primary-l.b4b9ccac.svg); height: 238px;
+        style="background-image: url(./assets/image/primary-l.b4b9ccac.svg); height: 238px;
     padding-bottom: 20%; background-position-y: 4px;">
         </div>
         <!-- wave seperator end -->
@@ -879,7 +879,7 @@ Collective climate action</div>
 
                 <div class="flex-center">
                     <button class="btn fill-btn fw-smb" style="height: 56px">
-                        <img src="/assets/image/firefox-logo.svg" alt="">
+                        <img src="./assets/image/firefox-logo.svg" alt="">
                         Switch to Ecosia - It's free
                     </button>
                 </div>
@@ -901,7 +901,7 @@ Collective climate action</div>
             </svg>
             <div class="footer__content">
                 <div class="footer__content--partner-logo">
-                    <img src="/assets/image/b-corp.e1b18018.svg" alt="">
+                    <img src="./assets/image/b-corp.e1b18018.svg" alt="">
                 </div>
                 <div class="footer__menu">
                     <h4 class="footer__menu__title title-medium fw-bold ttu">What we do</h4>
